--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Imam Gadget Store</title>
-  <meta name="description" content="Affordable phones, phone cases, and gadgets. Order via WhatsApp quickly." />
+  <title>ZONE47 </title>
+  <meta name="Your trusted Phone zone" content="Affordable phones, phone cases, and gadgets. Order via WhatsApp quickly." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="container header">
     <div class="brand">
       <img src="logo.png" alt="Logo" class="logo" onerror="this.style.display='none'"/>
-      <h1 id="shopName">Imam Gadget Store</h1>
+      <h1 id="shopName">ZONE47e</h1>
     </div>
     <div class="actions">
       <input id="searchInput" type="search" placeholder="Search phones, cases, gadgets..." />
@@ -37,8 +37,8 @@
   </main>
 
   <footer class="container footer">
-    <p>📍 Delivery in Nigeria | ⏰ 9am–8pm | ☎️ <span id="contactPhone">+234-801-234-5678</span></p>
-    <p>© <span id="year"></span> <span id="shopNameFooter">Imam Gadget Store</span>. All rights reserved.</p>
+    <p>📍 Delivery in Nigeria | ⏰ 9am–8pm | ☎️ <span id="contactPhone">+234-7083917553</span></p>
+    <p>© <span id="year"></span> <span id="shopNameFooter">ZONE47 PHONE STORE</span>. All rights reserved.</p>
   </footer>
 
   <!-- Cart Drawer -->
