--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ZONE47 </title>
-  <meta name="Your trusted Phone zone" content="Affordable phones, phone cases, and gadgets. Order via WhatsApp quickly." />
+  <meta name="You  trusted Phone zone" content="Affordable phones, phone cases, and gadgets. Order via WhatsApp quickly." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
