--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   <script>
     // Basic config you can edit
     window.SHOP_CONFIG = {
-      name: "Imam Gadget Store",
-      phone: "+2348012345678", // WhatsApp number, digits only or with +
+      name: "ZONE_47 PHONE STORE",
+      phone: "+2347083917553", // WhatsApp number, digits only or with +
       currency: "NGN"
     };
   </script>
