--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ZONE47 </title>
+  <title>ZONE47</title>
   <meta name="You  trusted Phone zone" content="Affordable phones, phone cases, and gadgets. Order via WhatsApp quickly." />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -11,7 +11,7 @@
   <header class="container header">
     <div class="brand">
       <img src="logo.png" alt="Logo" class="logo" onerror="this.style.display='none'"/>
-      <h1 id="shopName">ZONE47e</h1>
+      <h1 id="shopName">ZONE47</h1>
     </div>
     <div class="actions">
       <input id="searchInput" type="search" placeholder="Search phones, cases, gadgets..." />
@@ -38,7 +38,7 @@
 
   <footer class="container footer">
     <p>📍 Delivery in Nigeria | ⏰ 9am–8pm | ☎️ <span id="contactPhone">+234-7083917553</span></p>
-    <p>© <span id="year"></span> <span id="shopNameFooter">ZONE47 PHONE STORE</span>. All rights reserved.</p>
+    <p>© <span id="year"></span> <span id="shopNameFooter">ZONE47 PHONE STOREs</span>. All rights reserved.</p>
   </footer>
 
   <!-- Cart Drawer -->
@@ -63,7 +63,7 @@
   <script>
     // Basic config you can edit
     window.SHOP_CONFIG = {
-      name: "ZONE_47 PHONE STORE",
+      name: "ZONE47 PHONE STORE",
       phone: "+2347083917553", // WhatsApp number, digits only or with +
       currency: "NGN"
     };
