--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <script>
     // Basic config you can edit
     window.SHOP_CONFIG = {
-      name: "ZONE47 PHONE STORE",
+      name: "ZONE47 PHONE STOREs",
       phone: "+2347083917553", // WhatsApp number, digits only or with +
       currency: "NGN"
     };
