--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <footer class="container footer">
     <p>📍 Delivery in Nigeria | ⏰ 9am–8pm | ☎️ <span id="contactPhone">+234-7083917553</span></p>
-    <p>© <span id="year"></span> <span id="shopNameFooter">ZONE47 PHONE STOREs</span>. All rights reserved.</p>
+    <p>© <span id="year"></span> <span id="shopNameFooter">ZONE47 PHONE STORE</span>. All rights reserved.</p>
   </footer>
 
   <!-- Cart Drawer -->
